icons and button styling
added a bunch of icons, started styling buttons, positioned the layout a bit

--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,25 @@
 
 <body>
     <main>
-        <div id="statContainer" class="container">
-            <span id="counterLbl"></span>
-        </div>
-        <div id="cheeseContainer" class="container">
+        <section id="navContainer" class="container">
+            <button class="btn btn-icon" id="saveBtn"><div class="icon"></div></button>
+            <button class="btn btn-icon" id="resetSaveBtn"><div class="icon"></div></button>
+        </section>
+        <section id="statContainer" class="container">
+        </section>
+        <section id="cheeseContainer" class="container">
             <div id="cheese">
                 <img src="img/Cheese.png">
             </div>
-        </div>
-        <div id="upgradeContainer" class="container"></div>
-    </main>
+            <div id="counterLbl"></div>
 
-    <button id="saveBtn">save the game</button>
+        </section>
+        <section id="upgradeContainer" class="container"></section>
+    </main>
+    <footer>
+
+    </footer>
     <button id="buyAutoclickerBtn" class="hidden">Buy autoclicker!</button>
-    <button id="resetSaveBtn">Reset game!</button>
 </body>
 
 <!-- this is where the real shit happens -->
