more layout changes
added a nice border and defined heights of layout

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
             <button class="btn btn-icon" id="resetSaveBtn"><div class="icon"></div></button>
         </section>
         <section id="statContainer" class="container">
+            (stats go here eventually!)
         </section>
         <section id="cheeseContainer" class="container">
             <div id="cheese">
@@ -26,12 +27,13 @@
             <div id="counterLbl"></div>
 
         </section>
-        <section id="upgradeContainer" class="container"></section>
+        <section id="upgradeContainer" class="container">
+            <button id="buyAutoclickerBtn" class="hidden">Buy autoclicker!</button>
+        </section>
     </main>
     <footer>
 
     </footer>
-    <button id="buyAutoclickerBtn" class="hidden">Buy autoclicker!</button>
 </body>
 
 <!-- this is where the real shit happens -->
