--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </section>
         <section id="cheeseContainer" class="container">
             <div id="cheese">
-                <img src="img/Cheese.png">
+                <img src="img/Cheese.svg">
             </div>
             <div id="counterLbl"></div>
 
