renamed js output

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,6 @@
 </body>
 
 <!-- this is where the real shit happens -->
-<script src="clicky.js"></script>
+<script src="cheeseclicker.js"></script>
 
 </html>
