--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>clicky</title>
+    <title>Cheese Clicker</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Rubik:wght@400;600&display=swap" rel="stylesheet">
@@ -31,9 +31,6 @@
     <footer>
 
     </footer>
+    <script src="cheeseclicker.js"></script>
 </body>
-
-<!-- this is where the real shit happens -->
-<script src="cheeseclicker.js"></script>
-
 </html>
