show cheese generated per second

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
                 <img src="img/Cheese.svg">
             </div>
             <div id="counterLbl"></div>
+            <div id="secLbl"></div>
 
         </section>
         <section id="upgradeContainer" class="container">
