basic toasting mechanism

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main>
+    <main id="main">
         <section id="navContainer" class="container">
             <button class="btn btn-icon" id="saveBtn"><div class="icon"></div></button>
             <button class="btn btn-icon" id="resetSaveBtn"><div class="icon"></div></button>
@@ -28,6 +28,9 @@
         </section>
         <section id="upgradeContainer" class="container">
         </section>
+        <div id="toasterContainer">
+
+        </div>
     </main>
     <footer>
 
