basic modal system + graphics

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,7 @@
         </section>
         <section id="upgradeContainer" class="container">
         </section>
-        <div id="toasterContainer">
-
-        </div>
+        <div id="toasterContainer"></div>
     </main>
     <footer>
 
